--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,9 +25,9 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            g10f/wiki
+            ghcr.io/g10f/wiki
           tags: |
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=pep440,pattern={{version}},value=${{ steps.version.outputs.VERSION }}
             type=sha
 
