--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,7 +76,7 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           config: |
             Host g10f-wiki
-              ProxyCommand sh -c "aws ssm start-session --region eu-central-1 --target i-09ea26be80db21c44 --document-name AWS-StartSSHSession --parameters 'portNumber=%p'"
+              ProxyCommand sh -c "aws ssm start-session --region eu-central-1 --target ${{ secrets.INSTANCE_ID }} --document-name AWS-StartSSHSession --parameters 'portNumber=%p'"
               User ubuntu
 
       - uses: actions/setup-python@v5
